--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "discord.js": "^14.18.0"
+    "discord.js": "^14.18.0",
+    "mongoose": "^8.10.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
